finalized blog layout, completed blog widget

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,8 +11,8 @@ const today = new Date();
         <div
           class="flex flex-col md:flex-row gap-4 md:gap-20 mb-2 font-bold text-lg"
         >
-          <a href="/contact">Portfolio</a>
-          <a href="/contact">Blog</a>
+          <a href="/">Home</a>
+          <a href="/blog">Blog</a>
           <a href="/contact">Contact</a>
         </div>
         <div class="p-2">
