--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -36,70 +36,5 @@ const buttonClasses = `button ${globalClasses} ${typeClasses[type]}`;
 </div>
 
 <style>
-  .button {
-    line-height: inherit;
-    padding-top: 0.75em;
-    padding-bottom: 0.7em;
-    /* border: 0.5px solid white; */
-    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
-    outline: 1px solid;
-    outline-color: rgba(255, 255, 255, 0.5);
-    outline-offset: 0px;
-    text-shadow: none;
-    transition:
-      all 1250ms cubic-bezier(0.19, 1, 0.22, 1),
-      color 100ms cubic-bezier(0.19, 1, 0.22, 1);
-    font-weight: 500;
-    letter-spacing: 0.5px;
-  }
-
-  .button-primary {
-    position: relative;
-    color: black;
-    mix-blend-mode: screen;
-  }
-
-  .button-primary::before {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: white;
-    border-radius: 2em;
-    content: "";
-    mix-blend-mode: color-burn;
-    pointer-events: none;
-  }
-
-  .button-text {
-    display: block;
-    transform: translateY(-1.5px);
-  }
-
-  .button:hover {
-    box-shadow:
-      inset 0 0 20px rgba(255, 255, 255, 0.5),
-      0 0 20px rgba(255, 255, 255, 0.2);
-    outline-color: rgba(255, 255, 255, 0);
-    outline-offset: 15px;
-    /* text-shadow: 1px 1px 2px #427388; */
-  }
-
-  .button-primary:hover {
-    background-color: rgb(137, 170, 255);
-    color: white;
-  }
-
-  .button-secondary:hover {
-    background-color: rgb(190, 183, 254);
-  }
-
-  .button-tertiary:hover {
-    background-color: rgb(190, 183, 254);
-  }
-
-  /* .primary-button:hover .button-text {
-    transform: scale(1.2);
-  } */
+  /* Moved styles to global css file due to scoping issues when trying to use buttons in markdown. */
 </style>
