--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -15,7 +15,7 @@ const optimizedBackground = await getImage({
   style={`background-image: url('${optimizedBackground.src}'); background-size: cover; background-repeat: no-repeat;`}
   class="gradient-background min-h-96"
 > -->
-<div id="portfolio" class="relative top-[-60px] invisible"></div>
+<div id="portfolio" class="relative invisible"></div>
 
 <div class="gradient-background-2 min-h-96">
   <div class="container container-large">
