changed header image to public folder as temporary workaround for build error

--- a/src/components/BlogWidget.astro
+++ b/src/components/BlogWidget.astro
@@ -5,13 +5,13 @@ import Button from "../components/Button.astro";
 <div class="bg-purple p-6 px-8 my-14 rounded-lg">
   <div class="text-4xl mb-4 text-center">I'm open for work!</div>
   <p class="text-center pb-2">
-    Hello! I'm a user-experience (UX) Engineer (with a background in data
-    analysis and product strategy. I have over 10 years designing, building, and
-    optimizing digital products, and I'd love to bring my expertise to your
-    team.
+    Hello! I'm a user-experience (UX) Engineer with a background in data
+    analysis and product strategy. I have over 10 years of experience designing,
+    building, and optimizing digital products, and I'd love to bring my
+    expertise to your team.
   </p>
   <div
-    class="flex flex-col md:flex-row items-center justify-center w-full gap-6"
+    class="flex flex-col sm:flex-row items-center justify-center w-full gap-6"
   >
     <Button type="primary" text="About Me" link="/" />
     <Button type="secondary" text="Get in Touch" link="/contact" />
