updated margins, style tweaks

--- a/src/components/H3.astro
+++ b/src/components/H3.astro
@@ -24,11 +24,13 @@ const hideBracket = hideBracketOnMobile ? "hidden xl:flex" : "";
   </div>
 </div> -->
 <div class="flex items-center gap-2">
-  <span class={`text-purple text-2xl mb-[2px] ${hideBracket}`}>&lt;</span>
-  <h3 class={`text-lg xl:whitespace-nowrap overflow-hidden  ${center}`}>
+  <!-- <span class={`text-purple text-2xl mb-[2px] ${hideBracket}`}>&lt;</span> -->
+  <h3
+    class={`text-xl xl:whitespace-nowrap text-center overflow-hidden text-lightBlue ${center}`}
+  >
     {header}
   </h3>
-  <span class={`text-purple text-2xl mb-[2px] ${hideBracket}`}>&gt;</span>
+  <!-- <span class={`text-purple text-2xl mb-[2px] ${hideBracket}`}>&gt;</span> -->
 </div>
 
 <style>
