--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -33,7 +33,7 @@ import Icons from "./Icons.astro";
 
     <!-- Mobile -->
     <div class="bg-black md:hidden border-b border-gray-200 py-2 z-50">
-      <div class="px-4 flex justify-between items-center">
+      <div class="px-6 sm:px-8 flex justify-between items-center">
         <a href="/"><Logo /></a>
         <!-- Mobile Hamburger Menu Button -->
         <button id="hamburger-btn" class="text-white focus:outline-none">
@@ -76,7 +76,7 @@ import Icons from "./Icons.astro";
           text="Contact"
         />
 
-        <HeaderLink href="/Thomas Faddegon - Resume 2024.pdf" text="Resume" />
+        <HeaderLink href="/resume" text="Resume" />
         <Icons />
       </div>
     </div>
