--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -9,7 +9,7 @@ import graphic from "../images/graphics/graphic-1.webp";
     <div class="container container-large">
       <div class="padding-global relative overflow-visible">
         <div class="padding-extra">
-          <div class="grid grid-cols-1 xl:grid-cols-2 pt-20 py-16 gap-8">
+          <div class="grid grid-cols-1 xl:grid-cols-2 py-24 gap-8">
             <div class="col-span-1 bg-purple flex items-center">
               <Image
                 src={graphic}
@@ -26,9 +26,9 @@ import graphic from "../images/graphics/graphic-1.webp";
                 <h2 class="">5 Reasons Your Team Should Hire a UX Engineer</h2>
                 <div>
                   <p>
-                    My work as a UX engineer spans the realms of design,
-                    development, and product strategy. Here's what a good UX
-                    engineer can provide:
+                    The work of a user-experience engineer spans the realms of
+                    design, development, and product strategy. Here's what we
+                    can bring to the table:
                   </p>
                   <p>
                     <span class="font-bold"
@@ -52,16 +52,23 @@ import graphic from "../images/graphics/graphic-1.webp";
                     interfaces, maintaining the original design vision while ensuring
                     a seamless user experience.
                   </p>
-                  <p>
+
+                  <!-- <p>
                     <span class="font-bold">4. Data-Driven Design:</span>
                     A UX engineer with a background in Python and data analysis (like
                     myself) can use data to inform design decisions, ensuring an
                     optimized final product.
-                  </p>
+                  </p> -->
                   <p>
-                    <span class="font-bold">5. Agility in Development:</span>
+                    <span class="font-bold">4. Agility in Development:</span>
                     For crucial sprints, UX engineers can shift into full-time dev
                     mode and provide a much-needed extra set of hands.
+                  </p>
+                  <p>
+                    <span class="font-bold">5. Tech Translator:</span>
+                    We blend our engineering expertise with our UX skills in empathy
+                    and communication to break down technical concepts for non-technical
+                    stakeholders.
                   </p>
 
                   <!--
