--- a/src/components/ResumePosition.astro
+++ b/src/components/ResumePosition.astro
@@ -14,7 +14,7 @@ const { position, company, date, link } = Astro.props as {
     <div class="flex flex-col lg:flex-row lg:items-center">
       <h3 class="text-md">{position}</h3>
       <span class="hidden lg:flex">&nbsp; - &nbsp;</span>
-      <a href={link}
+      <a href={link} target="_blank"
         ><span class="text-lg text-lightBlue hover:text-lavendar"
           >{company}</span
         ></a
