--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -7,8 +7,8 @@ import designIcon from "../images/icons/design-icon.png";
 
 <section>
   <div class="container container-large">
-    <div class="padding-global py-20 md:py-36">
-      <div class="padding-extra">
+    <div class="padding-global py-20 lg:py-32">
+      <div>
         <div>
           <div class="flex justify-center">
             <h2 class="text-center mb-8 max-w-2xl lg:max-w-5xl">
@@ -21,7 +21,7 @@ import designIcon from "../images/icons/design-icon.png";
           <div class="flex justify-center items-stretch">
             <!-- <div class="grid grid-cols-1 lg:grid-cols-3"> -->
             <div
-              class="flex flex-col justify-center xl:flex-row items-center gap-6"
+              class="flex flex-col justify-center lg:flex-row items-center gap-2"
             >
               <Card
                 header="Front-End Development"
