--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -24,25 +24,26 @@ const imageRounded = rounded ? "rounded-full" : "rounded-xl";
 <div class=` h-full ${
   classes ?? ""
 }`>
-  <a href={link} class="h-full">
-    <div class="h-full">
-      <div
+  <div class="h-full">
+    <!-- <div
         class="card px-6 pt-6 pb-10 flex flex-col items-center border-2 bg-slate-900 drop-shadow-[0px_0px_3px_rgba(255,255,255,0.75)] h-full"
-      >
-        <div class=`max-w-36 flex mb-4 ${imageRounded} overflow-hidden`>
-          <Image src={icon} alt="icon" width="300" height="250" />
-        </div>
-        <div>
-          <H3 header={header} />
-          <!-- <h3>{header}</h3> -->
-        </div>
-        <div class="mb-2">
-          <span class="text-base">{title}</span>
-        </div>
-        <span class="text-center"><p class="mb-[-4px]">{text}</p></span>
+      > -->
+    <div class="card px-6 pt-6 pb-10 flex flex-col items-center bg-black">
+      <div class=`max-w-36 flex mb-4 ${imageRounded} overflow-hidden `>
+        <a href={link}>
+          <Image src={icon} alt="icon" width="300" height="250" /></a
+        >
       </div>
+      <div>
+        <a href={link}> <H3 header={header} /></a>
+        <!-- <h3>{header}</h3> -->
+      </div>
+      <div class="mb-1">
+        <span class="text-base">{title}</span>
+      </div>
+      <span class="text-center"><p class="mb-[-4px]">{text}</p></span>
     </div>
-  </a>
+  </div>
 </div>
 
 <style>
@@ -61,7 +62,7 @@ const imageRounded = rounded ? "rounded-full" : "rounded-xl";
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+
     pointer-events: none;
     z-index: -1;
   }
