--- a/src/components/Certification.astro
+++ b/src/components/Certification.astro
@@ -24,7 +24,7 @@ const { title, text, image } = Astro.props as Props;
     </div>
     <div class="flex flex-col gap-3">
       <!-- <H3 header={title}/> -->
-      <h3>{title}</h3>
+      <h3 class="text-lightBlue">{title}</h3>
       <p class="">{text}</p>
     </div>
   </div>
