changed h3 to blue

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -30,7 +30,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
             location="Higher Self Yoga"
             link="https://higherselfyoga.org"
             years="2020 - Present (Part Time)"
-            description="Designed and implemented a product and marketing strategy that grew user traffic from 1,000 to 25,000 monthly and expanded our email list from 2,000 to 16,000. Led a team in migrating from WordPress to Webflow to enhance design and functionality, which increased site speed by 50%, reduced bounce rates by 5%, and increased conversions by 25%. Developed a new community platform with optimized user flow and onboarding, integrating features like personalized dashboards, a tagged forum, and real-time messaging."
+            description="Designed and implemented a product and marketing strategy that grew user traffic from 1,000 to 25,000 monthly and grew email subscriber list from 2,000 to 18,000. Led a team in migrating from WordPress to Webflow to enhance design and functionality, which increased site speed by 50%, reduced bounce rates by 5%, and increased conversions by 25%. Developed a new community platform with optimized user flow and onboarding, integrating features like personalized dashboards, a tagged forum, and real-time messaging."
           />
         </div>
         <div class="track sm:py-16">
@@ -40,14 +40,14 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
               link="https://www.cruiseline.com/"
               location="Cruiseline.com"
               years="2018 - 2020"
-              description="Led a team in a comprehensive marketing and sales campaign, leveraging display, PPC, email, and SEO, increasing conversions by 30%. Proposed UX/UI enhancements using A/B testing, user recordings, and heatmaps to boost conversions. Guided engineering in aligning product prototypes with optimal UX design principles and business objectives. Conducted in-depth market and sales trend analysis over six years, positioning the company as an industry leader."
+              description="Led a team executing a comprehensive marketing and sales strategy that leveraged display, PPC, email, and SEO, increasing conversions by 30%. Proposed and implemented UX/UI enhancements using A/B testing, user recordings, and heatmaps to boost conversions. Guided engineering in aligning product prototypes with optimal UX design principles and business objectives. Conducted in-depth market and sales trend analysis over six years, positioning the company as an industry leader."
             />
             <Position
               title="Inbound Marketing & Content Strategy"
               location="Cruiseline.com"
               link="https://www.cruiseline.com/"
               years="2015 - 2018"
-              description="Crafted a robust content and email strategy, enhancing site and email presence through rebranding, SEO, and compelling editorial pieces which lead to a 900% increase in site traffic. Managed weekly analytics, leveraging insights to optimize content and marketing strategies. Collaborated with engineers to create a display ad network, generating upwards of $200k annually. Performed usability testing on new products, writing detailed feedback and bug reports for the dev team to optimize new features before launch."
+              description="Crafted a robust content and email strategy, enhancing site and email presence through rebranding, SEO, and compelling editorial pieces which led to a 900% increase in site traffic. Managed weekly analytics, leveraging insights to optimize content and marketing strategies. Collaborated with engineers to create a display ad network, generating upwards of $200k annually. Performed usability testing on new products, writing detailed feedback and bug reports for the dev team to optimize new features before launch."
             />
           </div>
         </div>
