--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,11 +24,9 @@ import { Image } from "astro:assets";
             </h1>
 
             <p>
-              As a User-Experience (UX) Engineer with over a decade of
-              experience in digital product design and development, I create
-              seamless experiences that empower users to achieve their goals
-              without friction, leading to higher customer satisfaction and
-              increased sales.
+              As a UX engineer with over a decade of expertise in product design
+              and development, I create seamless digital experiences that
+              captivate users and drive business growth.
             </p>
             <div class="flex flex-wrap gap-4">
               <Button text="Get in Touch" type="primary" link="/contact" />
