--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -22,27 +22,26 @@ import graphic from "../images/graphics/graphic-1.webp";
             <div class="col-span-1 bg-purple py-6">
               <!-- content -->
               <div class="flex flex-col gap-4">
-                <h5>How I Can Help</h5>
-                <h2 class="">5 Reasons Your Team Should Hire a UX Engineer</h2>
+                <h5>What I Provide</h5>
+                <h2 class="">5 Ways a UX Engineer Can Help Your Team</h2>
                 <div>
                   <p>
                     The work of a user-experience engineer spans the realms of
                     design, development, and product strategy. Here's what we
-                    can bring to the table:
+                    bring to the table:
                   </p>
                   <p>
                     <span class="font-bold"
                       >1. A Bridge Between Design and Dev:
                     </span>
-                    UX engineers are the essential link between design and development
-                    teams. We translate design concepts into technical requirements
-                    (and vice versa) while improving cross-team communication and
-                    collaboration.
+                    UX engineers are the essential link between design and dev teams,
+                    translating design concepts into technical requirements while
+                    improving cross-team collaboration.
                   </p>
                   <p>
                     <span class="font-bold">2. Rapid Prototyping:</span>
-                    A UX engineer on the design team can provide quick proof-of-concept
-                    prototypes, speeding up testing and iteration.
+                    A UX engineer on the design team can speed up testing and iteration
+                    by quickly developing proof-of-concept prototypes.
                   </p>
                   <p>
                     <span class="font-bold"
