--- a/src/components/H3.astro
+++ b/src/components/H3.astro
@@ -23,7 +23,7 @@ const hideBracket = hideBracketOnMobile ? "hidden xl:flex" : "";
     <div>&gt;</div>
   </div>
 </div> -->
-<div class="flex items-center gap-2">
+<div class="flex gap-2">
   <!-- <span class={`text-purple text-2xl mb-[2px] ${hideBracket}`}>&lt;</span> -->
   <h3
     class={`text-xl xl:whitespace-nowrap text-center overflow-hidden text-lightBlue ${center}`}
