--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -8,7 +8,7 @@ import designIcon from "../images/icons/design-icon.png";
 <section>
   <div class="container container-large">
     <div class="padding-global py-20 lg:py-32">
-      <div>
+      <div class="padding-extra">
         <div>
           <div class="flex justify-center">
             <h2 class="text-center mb-8 max-w-2xl lg:max-w-5xl">
@@ -25,19 +25,19 @@ import designIcon from "../images/icons/design-icon.png";
             >
               <Card
                 header="Front-End Development"
-                text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant digital experiences."
+                text="I build responsive, high-performing digital experiences using cutting-edge web technologies like Javascript/Typescript, React, Next, and Supabase."
                 icon={codeIcon}
                 classes="w-full md:w-2/3 xl:w-1/3"
               />
               <Card
                 header="User-Experience Design"
-                text="Using my extensive background in  copywriting, UI design, and user research, I create highly-intuitive interfaces and seamless customer journeys that foster lasting user engagement and loyalty."
+                text="I design intuitive interfaces, informative dashboards, and frictionless customer journeys that foster lasting user engagement and loyalty."
                 icon={designIcon}
                 classes="w-full md:w-2/3 xl:w-1/3"
               />
               <Card
                 header="Data-Driven Optimization"
-                text="I make analytics-based improvements that boost KPIs and increase conversions by effectively utilizing tools like Google Analytics, Optimizely, and a variety of Python data and visualization libraries."
+                text="I make analytics-based improvements that boost KPIs by effectively utilizing Google Analytics, Optimizely, and Python libraries like pandas and matplotlib."
                 icon={dataIcon}
                 classes="w-full md:w-2/3 xl:w-1/3"
               />
