--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,11 +10,11 @@ import { Image } from "astro:assets";
     <div class="padding-global">
       <div class="padding-extra">
         <div
-          class="grid grid-cols-1 lg:grid-cols-12 gap-12 lg:gap-14 w-full pt-12 lg:pt-20 pb-20 lg:pb-24"
+          class="grid grid-cols-1 lg:grid-cols-12 gap-12 lg:gap-16 w-full pt-12 lg:pt-20 pb-20 lg:pb-24"
           id="header-content"
         >
           <div
-            class="col-span-1 lg:col-span-7 flex flex-col gap-5 justify-center"
+            class="col-span-1 lg:col-span-7 lg:pr-4 flex flex-col gap-5 justify-center"
             id="header-text"
           >
             <h1>
