product engineer updates

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -19,14 +19,14 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
           class="flex flex-col lg:flex-row gap-10 md:gap-24 mb-16 padding-extra"
         >
           <Position
-            title="UX Engineer"
+            title="Product Engineer"
             location="The Luminary Agency"
             link="https://theluminaryagency.com/"
             years="2021 - Present (Part Time)"
             description="Developed responsive web interfaces using WordPress, Webflow, Squarespace, and HTML/CSS/JavaScript. Created UI wireframe designs with Figma, Relume, and Balsamiq, improving user experience and navigability. Collaborated on brand aesthetics with the design team, ensuring cohesive visual strategies across platforms. Achievements include 1,000% traffic increase, 150% higher conversion rates, and 15% lower bounce rates."
           />
           <Position
-            title="Front-End Developer & Product Strategist"
+            title="Product Engineer"
             location="Higher Self Yoga"
             link="https://higherselfyoga.org"
             years="2020 - Present (Part Time)"
@@ -104,8 +104,9 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
 
 <style>
   .track {
-    border: 2px solid white;
+    border: 2px solid rgb(150, 134, 134);
     border-left: none;
+
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     border-top-right-radius: 10px;
