--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,8 +24,8 @@ import { Image } from "astro:assets";
             </h1>
 
             <p>
-              As a UX engineer with over a decade of expertise in product design
-              and development, I create seamless digital experiences that
+              As a product engineer with over a decade of expertise in web
+              design and development, I create seamless digital experiences that
               captivate users and drive business growth.
             </p>
             <div class="flex flex-wrap gap-4">
