--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -23,6 +23,46 @@ import graphic from "../images/graphics/graphic-1.webp";
               <!-- content -->
               <div class="flex flex-col gap-4">
                 <h5>What I Provide</h5>
+                <h2 class="">5 Ways a Product Engineer Can Help Your Team</h2>
+                <div>
+                  <p>
+                    The work of a product engineer spans the realms of design,
+                    development, and product strategy. Here's what we bring to
+                    the table:
+                  </p>
+                  <p>
+                    <span class="font-bold"
+                      >1. Improved Cross-Team Collaboration:
+                    </span>
+                    We serve as the critical link between design, dev, and product
+                    teams, harmonizing product vision and technical execution.
+                  </p>
+                  <p>
+                    <span class="font-bold">2. Rapid Prototyping:</span>
+                    We work with the design team to quickly turn concepts into viable
+                    prototypes, accelerating testing and iteration.
+                  </p>
+                  <p>
+                    <span class="font-bold"
+                      >3. Precision in Implementation:</span
+                    >
+                    We translate product and design requirements into robust solutions,
+                    preserving the original design vision while optimizing for performance
+                    and user experience.
+                  </p>
+                  <p>
+                    <span class="font-bold">4. Agility in Development:</span>
+                    During crucial sprints, product engineers can shift into full-time
+                    dev mode and provide an extra set of hands.
+                  </p>
+                  <p>
+                    <span class="font-bold">5. Tech Translator:</span>
+                    Our holistic understanding of design, engineering, and product
+                    strategy enables us to break down technical concepts for non-technical
+                    stakeholders.
+                  </p>
+
+                  <!-- <h5>What I Provide</h5>
                 <h2 class="">5 Ways a UX Engineer Can Help Your Team</h2>
                 <div>
                   <p>
@@ -51,13 +91,6 @@ import graphic from "../images/graphics/graphic-1.webp";
                     interfaces, maintaining the original design vision while ensuring
                     a seamless user experience.
                   </p>
-
-                  <!-- <p>
-                    <span class="font-bold">4. Data-Driven Design:</span>
-                    A UX engineer with a background in Python and data analysis (like
-                    myself) can use data to inform design decisions, ensuring an
-                    optimized final product.
-                  </p> -->
                   <p>
                     <span class="font-bold">4. Agility in Development:</span>
                     For crucial sprints, UX engineers can shift into full-time dev
@@ -68,7 +101,7 @@ import graphic from "../images/graphics/graphic-1.webp";
                     We blend our engineering expertise with our UX skills in empathy
                     and communication to break down technical concepts for non-technical
                     stakeholders.
-                  </p>
+                  </p> -->
 
                   <!--
               <div class="flex flex-col gap-4">
