--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -36,7 +36,7 @@ const optimizedBackground = await getImage({
               "Data Analysis",
             ]}
             header="Beat Trends"
-            text="Beat Trends is an interactive graphing app that visualizes the popularity of different genres of dance music over time. I created this graph app by first crafting a custom web scraper with Python and Selenium which I used to capture all the tracks from the Beatport Top 100 on the first of each month for a decade in a CSV format. After collecting the data, I used Pandas to clean it up and organize it into JSONs organized by year. For the final touch, I combined React and the powerful graph library D3.js to design the UI and visualize the data, making the app both informative and interactive."
+            text="Beat Trends is an interactive graphing app that visualizes the popularity of different dance music genres and artists over time. I started by building a specialized web scraper using Python and Selenium. This tool gathered historical data from the Beatport Top 100, capturing all track listings on the first day of each month from the past decade. After collecting the data, I used Pandas to clean it up and organize it into JSONs organized by year. For the final touch, I combined React and the powerful graph library D3.js to design the UI and visualize the data, making the app both informative and interactive."
             link="https://beat-trends.netlify.app/"
             links={{
               "View Code": "https://github.com/thomasfaddegon/beat-trends",
@@ -69,7 +69,7 @@ const optimizedBackground = await getImage({
               "Tailwind",
             ]}
             header="My Portfolio (This Site)"
-            text="Since my portfolio is mostly a static site, Astro felt like the perfect choice due to its lightning fast loading times. For the components where I did need to add interactivity or dynamic data, I was easily able to incorporate React. I also used Tailwind for styling and Typescript for type safety."
+            text="For this portfolio, I decided to use the static site generator Astro  due to its lightning fast loading times. I used typescirpt for type-saftey and an improved DX, and for CSS I utilized Tailwind for rapid component styling. Even though Astro is designed to ship without JavaScript by default, I found it straightforward to integrate React for those components where interactivity or dynamic data was necessary."
             link="https://shattereddisk.github.io/rickroll/rickroll.mp4"
             links={{
               "View Code": "https://github.com/thomasfaddegon/my-portfolio",
