--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -11,9 +11,9 @@ import designIcon from "../images/icons/design-icon.png";
       <div class="padding-extra">
         <div>
           <div class="flex justify-center">
-            <h2 class="text-center mb-8 max-w-2xl lg:max-w-5xl">
-              I use a holistic skillset of engineering, user behavior, and
-              product strategy to polish ideas to perfection.
+            <h2 class="text-center mb-8 max-w-2xl lg:max-w-6xl">
+              I use a holistic skillset of engineering, product strategy, and
+              data analysis to polish ideas to perfection.
             </h2>
           </div>
           <div class="mt-4"></div>
@@ -25,13 +25,13 @@ import designIcon from "../images/icons/design-icon.png";
             >
               <Card
                 header="Front-End Development"
-                text="I build responsive, high-performing digital experiences using cutting-edge web technologies like Javascript/Typescript, React, Next, and Supabase."
+                text="I build responsive, high-performing digital experiences using cutting-edge web technologies including Javascript, Typescript, React, Next, and Supabase."
                 icon={codeIcon}
                 classes="w-full md:w-2/3 xl:w-1/3"
               />
               <Card
-                header="User-Experience Design"
-                text="I design intuitive interfaces, informative dashboards, and frictionless customer journeys that foster lasting user engagement and loyalty."
+                header="Product/UX Design"
+                text="I use thoughtful product design and UX best-practices to create frictionless user journeys, driving engagement and accomplishing business objectives."
                 icon={designIcon}
                 classes="w-full md:w-2/3 xl:w-1/3"
               />
