--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -31,15 +31,15 @@ import Button from "../components/Button.astro";
                   </div>
                 </div>
                 <h3 class="text-center text-xl mb-10">
-                  UX Engineer | Brooklyn, NY
+                  Product Engineer | Brooklyn, NY
                 </h3>
                 <p class="mb-8">
-                  Hello! I am a dedicated User-Experience (UX) Engineer with a
-                  proven track record of leveraging front-end technologies,
+                  Hello! I am a dedicated product engineer with a proven track
+                  record of leveraging front-end technologies, product strategy,
                   user-centric design, and data analysis to enhance digital
                   platforms and achieve business goals. With over 10 years of
-                  web experience building and optimizing digital products, my
-                  work has led to significant improvements in traffic, user
+                  web experience building and optimizing web products, my work
+                  has led to significant improvements in traffic, user
                   engagement, conversion rates, and overall business growth. My
                   holistic approach blends an empathetic and intuitive
                   understanding of user behavior with robust analytical
@@ -57,8 +57,12 @@ import Button from "../components/Button.astro";
                       React, NextJS, Node, REST, Astro, CSS, Sass, SQL, NoSQL.
                     </span>
                     <span>
-                      <strong>UX/UI Design:</strong> Research and strategy, page
-                      design and optimization, user testing, Figma, wireframing.
+                      <strong>Product & Marketing:</strong> Competitor/market analysis,
+                      content strategy, KPI analysis, SEO & SEM, A/B testing.
+                    </span>
+                    <span>
+                      <strong>UX/UI Design:</strong> User research, page design and
+                      optimization, user testing, Figma, wireframing.
                     </span>
                     <span>
                       <strong>Data & Analytics:</strong> GA, funnel/conversion optimization,
